--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="droidmentor.tabwithviewpager">
+    package="jlcmoore.whatsprivacy">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -8,16 +10,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPager.TabWithIconActivity">
 
-        </activity>
-        <activity android:name=".ViewPager.TabWOIconActivity"></activity>
-        <activity android:name=".ViewPager.CustomTabActivity">
+        <activity android:name="jlcmoore.whatsprivacy.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="jlcmoore.whatsprivacy.ui.QuestionsActivity"
+            android:parentActivityName="jlcmoore.whatsprivacy.ui.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="jlcmoore.whatsprivacy.ui.MainActivity" />
+        </activity>
+        <activity
+            android:name="jlcmoore.whatsprivacy.ui.QuestionsFinishedActivity">
+        </activity>
+        <activity
+            android:name="jlcmoore.whatsprivacy.ui.SummaryActivity">
         </activity>
     </application>
 
